# conduit-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
src/: client.rs  common.rs  error.rs  lib.rs  matching.rs  model.rs  primitives.rs  psychometrics.rs  reports.rs  transport.rs  webhooks.rs
tests/: validation.rs  webhooks.rs
